# verkle

./: Cargo.toml
src/: lib.rs  precompute.rs  trie.rs
